добавил exe-шник  и dll в игнор

--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,5 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/**
 # !tools/packages.config
+project/OsEngine/bin/Debug/OsEngine.exe
+project/OsEngine/bin/Debug/Interop.SmartCOM4Lib.dll
