--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -642,6 +642,7 @@
       <DependentUpon>BollingerOutburstUi.xaml</DependentUpon>
     </Compile>
     <Compile Include="Robots\aDemo\DemoHammer.cs" />
+    <Compile Include="Robots\aDemo\DemoRobot1.cs" />
     <Compile Include="Robots\aDemo\ThreeSoldiers.cs" />
     <Compile Include="Robots\BotFactory.cs" />
     <Compile Include="Robots\CounterTrend\ClusterCountertrend.cs" />
