--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -647,6 +647,7 @@
     </Compile>
     <Compile Include="Robots\aDemo\DemoHammer.cs" />
     <Compile Include="Robots\aDemo\DemoHammerArbitrage.cs" />
+    <Compile Include="Robots\aDemo\DemoMovingAverage.cs" />
     <Compile Include="Robots\aDemo\DemoRobot1.cs" />
     <Compile Include="Robots\aDemo\DemoRobot2.cs" />
     <Compile Include="Robots\aDemo\ThreeSoldiers.cs" />
