(dev) Учебный трендовый робот. Пробой верхнего конверта.

--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -650,6 +650,7 @@
     <Compile Include="Robots\aDemo\DemoMovingAverage.cs" />
     <Compile Include="Robots\aDemo\DemoRobot1.cs" />
     <Compile Include="Robots\aDemo\DemoRobot2.cs" />
+    <Compile Include="Robots\aDemo\DemoTrendEnvelopes.cs" />
     <Compile Include="Robots\aDemo\ThreeSoldiers.cs" />
     <Compile Include="Robots\BotFactory.cs" />
     <Compile Include="Robots\CounterTrend\ClusterCountertrend.cs" />
