(dev) Добавил бот Test2. Начал разработку алгоритма поиска уровней

--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -657,6 +657,7 @@
       <DependentUpon>PingBotUi.xaml</DependentUpon>
     </Compile>
     <Compile Include="Robots\aDev\Test1.cs" />
+    <Compile Include="Robots\aDev\Test2.cs" />
     <Compile Include="Robots\aLibs\CommonFuncs.cs" />
     <Compile Include="Robots\BotFactory.cs" />
     <Compile Include="Robots\CounterTrend\ClusterCountertrend.cs" />
