--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -658,7 +658,7 @@
     </Compile>
     <Compile Include="Robots\aDev\Test1.cs" />
     <Compile Include="Robots\aDev\Test2.cs" />
-    <Compile Include="Robots\aDev\Test1And4Candles.cs" />
+    <Compile Include="Robots\aDev\MaxBot.cs" />
     <Compile Include="Robots\aDev\Test6Candles.cs" />
     <Compile Include="Robots\aLibraries\Levels\AirLevels.cs" />
     <Compile Include="Robots\aLibraries\Levels\Extremums.cs" />
