--- a/project/OsEngine/OsEngine.csproj
+++ b/project/OsEngine/OsEngine.csproj
@@ -652,12 +652,13 @@
     <Compile Include="Robots\aDemo\DemoRobot2.cs" />
     <Compile Include="Robots\aDemo\DemoTrendEnvelopes.cs" />
     <Compile Include="Robots\aDemo\ThreeSoldiers.cs" />
-    <Compile Include="Robots\aDev\PingBot.cs" />
-    <Compile Include="Robots\aDev\PingBotUi.xaml.cs">
+    <Compile Include="Robots\aProd\PingBot.cs" />
+    <Compile Include="Robots\aProd\PingBotUi.xaml.cs">
       <DependentUpon>PingBotUi.xaml</DependentUpon>
     </Compile>
     <Compile Include="Robots\aDev\Test1.cs" />
-    <Compile Include="Robots\aDev\Test2.cs" />
+    <Compile Include="Robots\aProd\MaxBot.cs" />
+    <Compile Include="Robots\aDev\Test6Candles.cs" />
     <Compile Include="Robots\aLibs\CommonFuncs.cs" />
     <Compile Include="Robots\BotFactory.cs" />
     <Compile Include="Robots\CounterTrend\ClusterCountertrend.cs" />
@@ -1169,7 +1170,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Robots\aDev\PingBotUi.xaml">
+    <Page Include="Robots\aProd\PingBotUi.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
